[package]
name = "axum-idempotent"
description = "A middleware for handling idempotent requests in axum applications."
version = "0.1.5"
edition = "2021"
rust-version = "1.75.0"
authors = ["Jimmie Lovell <jimmieomlovell@gmail.com>"]
license = "MIT"
homepage = "https://github.com/jimmielovell/axum-idempotent"
keywords = ["idempotency", "sessions", "axum"]
categories = ["network-programming", "web-programming"]
repository = "https://github.com/jimmielovell/axum-idempotent"
documentation = "https://docs.rs/axum-idempotent"
readme = "README.md"

[dependencies]
axum = { version = "0.8.4" }
blake3 = "1.8.2"
tower-service = "0.3.3"
tower-layer = "0.3.3"
tracing = "0.1.41"
ruts = "0.5.9"

[dev-dependencies]
tower-cookies = "0.11.0"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
fred = "10.1.0"

[[test]]
name = "axum"
